# benchmark_leakage

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  compose.yaml  pyproject.toml  requirements-eval.txt  run_eval.sh  run_infer.sh  run_infer_noise_new.sh  run_infer_noise_origin.sh  run_infer_noise_origin_long.sh  run_pred.sh
scripts/: run_eval.sh  run_eval_noise_new.sh  run_eval_noise_origin.sh  run_eval_noise_origin_long.sh  run_infer.sh  run_infer_noise_new.sh  run_infer_noise_origin.sh  run_infer_noise_origin_long.sh  run_pred.sh
scripts/air-bench/: run_eval.sh  run_eval_noise_new.sh  run_eval_noise_new_10s.sh  run_eval_noise_new_1m.sh  run_eval_noise_new_3m.sh  run_eval_noise_new_5m.sh  run_eval_noise_origin.sh  run_eval_noise_origin_10s.sh  run_eval_noise_origin_1m.sh  run_eval_noise_origin_3m.sh  run_eval_noise_origin_5m.sh  run_eval_noise_origin_long.sh  run_eval_qwen2_audio.sh  run_infer.sh  run_infer_noise_new.sh  run_infer_noise_new_10s.sh  run_infer_noise_new_1m.sh  run_infer_noise_new_3m.sh  run_infer_noise_new_5m.sh  run_infer_noise_new_task.sh  run_infer_noise_origin.sh  run_infer_noise_origin_10s.sh  run_infer_noise_origin_1m.sh  run_infer_noise_origin_3m.sh  run_infer_noise_origin_5m.sh  run_infer_noise_origin_long.sh  run_infer_noise_origin_long_task.sh  run_infer_noise_origin_task.sh  run_infer_qwen2_audio.sh  run_random_baseline.sh
scripts/utils/: init.sh  (+2 more)
src/: inference.py  pred_prompt_half.py  pred_prompt_incorrect.py  summarize_results.py  summarize_results_air_bench.py
tools/: count_choices.py  count_choices_air.py  count_choices_mmau.py
(+39 files in other folders)
