[project]
name = "benchmark-leakage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "fastparquet>=2025.12.0",
    "flash-attn>=2.8.3",
    "librosa>=0.11.0",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "qwen-omni-utils>=0.0.8",
    "timm>=1.0.22",
    "transformers>=4.57.3",
    "vllm>=0.13.0",
]

[tool.uv]
no-build-isolation-package = ['flash-attn']
